# WeatherLibrary

./: README.md  UPLOAD.txt  example.py  main.py  pyproject.toml  setup.py
WeatherLookup/: __init__.py
weather/: __init__.py
weather-lookup/: __init__.py
